# software-updater

./: .gitignore  CMakeLists.txt  my_tree.xml
cfg/: copy_and_extract_package.xml  install_package.xml  main_tree.xml  my_tree.xml  update_ccu.xml  update_devices.xml  update_eiu.xml  update_oru.xml  wait_for_update_request.xml
etc/: sub_topic_async_action_node.hpp
include/software_updater/node/: dummy_nodes.h  find_latest_package.hpp  find_latest_package_node.h  install.hpp  install_node.h  receive_message.hpp  receive_message_node.h
include/software_updater/nodes/: copy_file.hpp  extract_archive.hpp  find_file.hpp  find_latest_package.hpp
lib/bt_node/: CMakeLists.txt
lib/bt_node/include/bt_node/archive/: extract_archive.h
lib/bt_node/include/bt_node/filesystem/: copy_file.h  find_file.h  get_file_type.h
lib/bt_node/src/archive/: extract_archive.cpp
lib/bt_node/src/filesystem/: copy_file.cpp  find_file.cpp  get_file_type.cpp
src/: common.h  main.cpp
src/node/: find_latest_package_node.cpp  install_node.cpp  receive_message_node.cpp
src/nodes/: copy_update_package.hpp  extract_archive.hpp  find_update_package.hpp
